# simple_img_proc_lib

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindFFmpeg.cmake  FindLive555.cmake
cmake/cmake/: FindGStreamer.cmake
common/: CMakeLists.txt  img.cpp  types.h
gtk_screen/: CMakeLists.txt  gtk_screen.cpp  gtk_screen.h
io/: CMakeLists.txt  input.cpp  input.h
test_imgs/: gdk_pixbuf_new_from_file unexpected end of file - Pesquisa Google.html
test_imgs/gdk_pixbuf_new_from_file unexpected end of file - Pesquisa Google_arquivos/: app.html  mG3eKyIkchZcMkHyGdNBZ7uNpD4ecOG6ZHdRqxLvfSvnKMT6sTsfT7XTSTxZWccU  mUuupec  mWVLMcer36a9c  rsAA2YrTvo3vJwXv_zaZfCc1aKUBBrgkA8_w.css  rsACT90oH59bWUUtTKV9tbc7Nqm3SgCMcWWQ
test_imgs/gdk_pixbuf_new_from_file unexpected end of file - Pesquisa Google_arquivos/app_data/: m_b_tp
